[package]
name = "bromberg_sl2"
description = "Cayley hashing as in 'Navigating in the Cayley Graph of SL₂(𝔽ₚ)'"
version = "0.7.0"
authors = ["Ben Weinstein-Raun <root@benwr.net>"]
edition = "2021"
license = "CC0-1.0"
homepage = "https://github.com/libfunc/bromberg_sl2"
repository = "https://github.com/libfunc/bromberg_sl2"
categories = ["cryptography", "algorithms", "no-std"]
keywords = ["hashing", "sl2", "homomorphic", "monoidal", "tillich-zemor"]

[lib]
name = "bromberg_sl2"
path = "src/lib.rs"

[features]
default = ["std"]
std = ["rayon"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.bench]
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
rayon = { version = "1.8", optional = true }
seq-macro = "^0.3"

[dev-dependencies]
digest = { version = "0.10", features = ["alloc"] }
criterion = "0.5"
num-bigint = "0.4"
quickcheck = "1.0"
sha3 = "0.10"

[[bench]]
name = "compare_with_sha"
harness = false
